attempt to fix navbar scale issue on Safari, updated exec information

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -51,7 +51,56 @@
   margin: 5px 0;        
   display: flex;
   justify-content: center;  
+} */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100px; /* Fixed height */
+  padding: 1% 10%;
+  position: relative;
+  background-color: #1e3f6b;
+  border-radius: 0px;
 }
+
+.hamburger {
+  font-size: 1.5em;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.drawer {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: 200px;
+  height: auto;
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 8px;
+  flex-direction: column;
+  display: flex;
+  align-items: stretch;
+  z-index: 1000;
+}
+
+.drawerItem {
+  color: black;         
+  padding: 10px 10px;
+  text-decoration: none;
+  margin: 5px 0;        
+  display: flex;
+  justify-content: center;  
+}
+
+.rightMenu {
+  display: flex;
+  gap: 25px;
+}
+
 
 /*Button Styles Navbar*/
 .button {
